--- a/configure.in
+++ b/configure.in
@@ -145,6 +145,12 @@ if test "x$PKG_CONFIG" == "x"
 then
 	AC_MSG_WARN([No pkg-config utility found or it's too old, I will have trouble finding installed libraries.])
 fi
+PKG_CHECK_MODULES(GIO, gio-2.0)
+EXTRA_LIBS="$EXTRA_LIBS $GIO_LIBS"
+EXTRA_CFLAGS="$EXTRA_CFLAGS $GIO_CFLAGS"
+PKG_CHECK_MODULES(GIO_UNIX, gio-unix-2.0)
+EXTRA_LIBS="$EXTRA_LIBS $GIO_UNIX_LIBS"
+EXTRA_CFLAGS="$EXTRA_CFLAGS $GIO_UNIX_CFLAGS"
 
 AX_PATH_BDB([4], [
 	       LIBS="$BDB_LIBS $EXTRA_LIBS"
@@ -398,6 +404,7 @@ fi
 EXTRA_LIBS="$EXTRA_LIBS $CURSES_LIB"
 AC_SUBST(EXTRA_LIBS)
 AC_SUBST(EXTRA_DISTS)
+AC_SUBST(EXTRA_CFLAGS)
 
 AC_OUTPUT([Makefile
 	  themes/Makefile
